--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,3 +37,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Official SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v2.1.0
+            
